# serverless-fastapi

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
serverless_fastapi/functions/api/: endpoints.py  function_app.py  requirements.txt
serverless_fastapi/stacks/azure/: Pulumi.yaml  __main__.py
tools/: deploy.sh  destroy.sh
